@@ -1,3 +1,7 @@
+2012-12-04  Marcus Shawcroft  <marcus.shawcroft@arm.com>
+
+	* gcc.target/aarch64/121127.c: New test.
+
 2012-12-04  Jakub Jelinek  <jakub@redhat.com>
 
 	PR testsuite/55587
